--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "dayjs": "^1.9.3",
     "sass-loader": "^10.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.4.5",
